--- a/signin page/style.css
+++ b/signin page/style.css
@@ -8,7 +8,7 @@ body {
   font-size: 20px;
   background-color: lightgray;
   height: 100vh;
-  border: 5px solid rgb(25, 109, 24);
+  border: 5px solid black;
 }
 .container {
   border-top: 5px solid rebeccapurple;
@@ -34,7 +34,7 @@ body {
   text-transform: uppercase;
   text-align: center;
   width: 90%;
-  color: pink;
+
   padding-top: 5px;
   padding-bottom: 5px;
   margin: 20px auto;
@@ -49,15 +49,13 @@ body {
   margin-right: 40px;
 }
 #pwd {
-  color: rebeccapurple;
-  margin-right: 35px;
+  margin-right: 30px;
 }
 
 .container p {
   font-size: 15px;
 }
 .phone {
-  color: aquamarine;
 }
 .field {
   height: 30px;
