validation added successfully

--- a/signin page/style.css
+++ b/signin page/style.css
@@ -7,8 +7,7 @@
 body {
   font-size: 20px;
   background-color: lightgray;
-  height: 100vh;
-  border: 5px solid black;
+  height: auto;
 }
 .container {
   border-top: 5px solid rebeccapurple;
@@ -17,10 +16,13 @@ body {
   width: 500px;
   padding: 25px;
   box-shadow: 0 0 70px 15px rgba(0, 0, 0, 0.5);
+  margin-bottom: 500px;
 }
 
-.btn {
-  font-size: 20px;
+.btn:hover {
+  font-size: 25px;
+  color: green;
+  text-transform: uppercase;
 }
 .container h2 {
   font-size: 35px;
@@ -39,13 +41,13 @@ body {
   padding-bottom: 5px;
   margin: 20px auto;
 }
-.txt1 {
+.name {
   margin-right: 35px;
 }
-.txt {
+.phone {
   margin-right: 30px;
 }
-.txt2 {
+.email {
   margin-right: 40px;
 }
 #pwd {
@@ -55,8 +57,25 @@ body {
 .container p {
   font-size: 15px;
 }
-.phone {
-}
+
 .field {
   height: 30px;
+}
+.loginContainer {
+  border-top: 5px solid rebeccapurple;
+  background-color: rgb(255, 255, 255);
+  margin: 50px auto;
+  width: 500px;
+  padding: 25px;
+  box-shadow: 0 0 70px 15px rgba(0, 0, 0, 0.5);
+  margin-bottom: 300px;
+}
+.txt2 {
+  margin-right: 39px;
+}
+#nuser {
+  font-size: 15px;
+}
+.btn {
+  font-size: 20px;
 }
