--- a/AdvsignupPage/src/app/user-login/user-login.component.css
+++ b/AdvsignupPage/src/app/user-login/user-login.component.css
@@ -6,9 +6,10 @@ body {
   align-items: center;
   min-height: 100vh;
   font-family: "Jost", sans-serif;
-  background: rgb(60, 198, 92);
+  background: rgb(247, 247, 248);
 }
 .main {
+  background-color: wheat;
   width: 350px;
   height: 500px;
   background: red;
@@ -22,6 +23,7 @@ body {
   display: none;
 }
 .signup {
+  /* background-color: wheat; */
   position: relative;
   width: 100%;
   height: 100%;
@@ -66,17 +68,21 @@ button {
   cursor: pointer;
 }
 button:hover {
-  background: #6d44b8;
+  background: #eae9ed;
+  color: #6d44b8;
 }
 .login {
   height: 560px;
-  background: #eee;
+  background: #eeeeee;
   border-radius: 60% / 10%;
   transform: translateY(-130px);
   transition: 0.8s ease-in-out;
 }
+.login {
+  background-color: #6d44b8;
+}
 .login label {
-  color: #573b8a;
+  color: #f5f4f7;
   transform: scale(0.6);
 }
 
